<resources>
    <string name="app_name">GROW UP</string>

    <string name="email_hint">Email Adress</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Start!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="passwordC_hint">Confirm password</string>
    <string name="nameSurname_hint">Name and Surname</string>
    <string name="age_hint">Age</string>
    <string name="choose_coach">Choose your coach</string>
    <string name="statistics">Statistics</string>
    <string name="upload">Upload</string>
    <string name="diet">Diet</string>
    <string name="training">Training</string>
    <string name="uploadfile">Upload here your json file</string>
    <string name="uploadtrain">Upload new routine</string>
    <string name="uploaddiet">Upload new diet</string>
    <string name="train_select">Avaiable routines</string>
    <string name="diet_select">Avaiable diets</string>
    <string name="cuestionary">Cuestionary</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="recommendations">Recommendations</string>
    <string name="kcal">kcal</string>
    <string name="carbs">carbs</string>
    <string name="prot">Proteins</string>
    <string name="fat">Fats</string>
    <string name="dietName">Name your diet</string>
    <string name="trainName">Name your routine</string>
    <string name="uplocadnew">New routine</string>
    <string name="name_your_exercice">Name your exercice</string>
    <string name="kg">KG</string>
    <string name="rec">REC</string>
    <string name="rir">RIR</string>
    <string name="give_some_details">Give some details</string>
    <string name="insert_photo">INSERT PHOTO</string>
    <string name="exercices">Exercices</string>
    <string name="daily_macros">Daily macros</string>
    <string name="kcal_diet">KCAL:</string>
    <string name="carbs_diet">CARBS:</string>
    <string name="bulk">Bulk</string>
    <string name="comming_soon">Comming soon...</string>
    <string name="rules">Introduce here the following measures</string>
    <string name="tip">Try to weigh and measure yourself on an empty stomach every Sunday.</string>
    <string name="send">Send</string>
    <string name="left_arm">Left arm</string>
    <string name="right_arm">Right arm</string>
    <string name="chest">Chest</string>
    <string name="abdomen">Abdomen</string>
    <string name="cm">cm</string>
    <string name="hip">Hip</string>
    <string name="weight">Weight</string>
    <string name="right_thigh">Right thigh</string>
    <string name="left_thigh">Left thigh</string>
</resources>