<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413248">

    <!-- Botón de "atrás" -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"

        >
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <!-- Título -->
        <TextView
            android:id="@+id/nameClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="NOMBRE CLIENTE"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"/>
        <!-- INTRODUCIR NOMBRE CLIENTE-->
        <!-- TextViews cuadrados -->
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:src="@drawable/logo_foreground" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        >


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selection"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/cuestionary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTipoDieta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/desayunoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breakfast"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/comidaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lunch"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/cenaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dinner"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/snackEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/snack"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/recomendacionesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recommendations"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/kcalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kcal"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/carbsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/carbs"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/protEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prot"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/fatEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fat"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/subirButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#D72534"
            android:text="@string/upload" />

    </LinearLayout>


</ScrollView>


</RelativeLayout>
