<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#413248">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:letterSpacing="0.2"
        android:textSize="22dp"


        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_foreground">

    </ImageView>


    <LinearLayout
        android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        >


        <TextView
            android:id="@+id/inLogin"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#A6A6A6"/>

        <TextView
            android:id="@+id/inRegister"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#A6A6A6"
            android:background="@drawable/selection"


            />



    </LinearLayout>


    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:inputType="text" />


    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/cPassword_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordC_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/password_edittext"
        android:drawableLeft="@drawable/ic_lock1"
        android:drawablePadding="10dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/nameSurname_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameSurname_hint"
        android:inputType="text"
        android:layout_below="@+id/cPassword_edittext"
        android:drawableLeft="@drawable/ic_fileperson"
        android:drawablePadding="10dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/age_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:layout_below="@+id/nameSurname_edittext"
        android:drawableLeft="@drawable/ic_calendardate"
        android:drawablePadding="10dp"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/age_edittext"
        android:contentDescription="@string/choose_coach"
        android:prompt="@string/choose_coach" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerRegister"
        android:layout_marginTop="32dp"
        android:backgroundTint="#D72534"
        android:text="Register" />

</RelativeLayout>
