<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413248">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:letterSpacing="0.2"
        android:textSize="26sp"


        />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_foreground">

    </ImageView>


    <LinearLayout
        android:id="@+id/in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        >


        <TextView
            android:id="@+id/inLogin"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="#A6A6A6"
            android:background="@drawable/selection"/>

        <TextView
            android:id="@+id/inRegister"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#A6A6A6"
            android:textSize="18dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#A6A6A6" />

    <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:textColorHint="#A6A6A6"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#D72534"
        android:onClick="go"
        android:text="@string/login_button" />

</RelativeLayout>
