<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413248">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="back"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <!-- Título -->
        <TextView
            android:id="@+id/nameClient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_foreground" />
    </LinearLayout>
    <TextView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="29sp"
        android:textColor="@color/white"
        android:layout_below="@id/header"
        android:text="@string/statistics"
        />
    <LinearLayout
        android:id="@+id/macrosLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginVertical="190dp"
        android:layout_marginHorizontal="90dp"
        android:background="@drawable/selection"
        android:layout_below="@id/header">
        <TextView
            android:id="@+id/macroHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/comming_soon"
            />




    </LinearLayout>


</RelativeLayout>