<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413248">

    <!-- Botón de "atrás" -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"

        >
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <!-- Título -->
        <TextView
            android:id="@+id/title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:src="@drawable/logo_foreground" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/firstline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="125dp">


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/square_1"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:background="@drawable/box">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_training"
                android:paddingTop="10dp"
                />
            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/training"
                android:textSize="16sp"
                />
        </LinearLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/square_2"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:background="@drawable/box">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_diet"
                android:paddingTop="10dp"
                />
            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/diet"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">


        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/square_3"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:background="@drawable/box">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_journalbookmark"
                android:paddingTop="19dp"
                />
            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="Measures and weight"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/square_4"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:background="@drawable/box">

            <ImageView
                android:id="@+id/image4"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_statitics"
                android:paddingTop="10dp"
                />
            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/statistics"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
